Fix scrollbar overflow

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ table tr td ul {
     top: 0;
     transition: right linear 0.2s;
     padding: 50px;
-    overflow: hidden;
+    overflow: hidden !important;
     text-align: center;
     display: flex;
     justify-content: center;
